refactor(系统设置): 优化系统管理员登陆逻辑